[INIT](CLIENT; DOCS): added lib paths to index.html{I.A.}  + moved commit message standard to Contributing.md

--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>Job-Tracker</title>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>Job-Tracker</h1>
 
-    
+
     <div ui-view></div>
 
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+
 
     <script src="app/login/login.js"></script>
     <script src="app/mainList/mainList.js"></script>
