--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>Job-Tracker</h1>
+
     <div ui-view></div>
 
     <script src="lib/angular/angular.min.js"></script>
@@ -21,9 +22,10 @@
     <script src="app/mainList/mainList.js"></script>
     <script src="app/signup/signup.js"></script>
     <script src="app/singleJob/singleJob.js"></script>
+
     <script src="app/services/JobFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
-    <script src="app/app.js"></script>
+   
+    <script src="app.js"></script>
   </body>
 </html>
-
