--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,8 @@
     <script src="app/mainList/mainList.js"></script>
     <script src="app/signup/signup.js"></script>
     <script src="app/singleJob/singleJob.js"></script>
+    <script src="app/services/JobFactory.js"></script>
+    <script src="app/services/AuthFactory.js"></script>
     <script src="app/app.js"></script>
   </body>
 </html>
