--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -1,10 +1,47 @@
-<div id='signup'>
-  <h1>signup</h1>
-  <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signup</button>
-  </form>
-  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
-</div>
 
+<div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <div class="panel-title">Sign Up</div>
+        </div>
+        <div style="padding-top:30px" class="panel-body">
+            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+            <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
+                <div class="form-group">
+                    <label for="firstname" class="col-md-3 control-label">Username</label>
+                    <div class="col-md-9">
+                        <input type="text" class="form-control" name="firstname" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-md-3 control-label">Password</label>
+                    <div class="col-md-9">
+                        <input type="password" class="form-control" name="passwd" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="icode" class="col-md-3 control-label">Confirm Password</label>
+                    <div class="col-md-9">
+                        <input type="text" class="form-control" name="icode" placeholder="">
+                    </div>
+                </div>
+                <div style="margin-top:10px" class="form-group">
+                    <div class="col-sm-12 controls">
+                        <a id="btn-login" href="#" class="btn btn-success">Sign Up </a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-12 control">
+                        <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                            Do have an account!
+                            <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+							Sign In Here
+							</a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
