(INIT):(Client):Created Login.html & SignUp.html files

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,6 @@
     <script src="app/services/JobFactory.js"></script>
     <script src="app/services/AuthFactory.js"></script>
    
-    <script src="app.js"></script>
+    <script src="app/app.js"></script>
   </body>
 </html>
