--- a/client/index.html
+++ b/client/index.html
@@ -11,13 +11,13 @@
 
   </head>
   <body>
-    <h1>Job-Tracker</h1>
-
+    <nav-bar></nav-bar>
     <div ui-view></div>
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 
+    <script src="app/navbar/navbar.js"></script>
     <script src="app/login/login.js"></script>
     <script src="app/mainList/mainList.js"></script>
     <script src="app/signup/signup.js"></script>
@@ -28,7 +28,7 @@
     <script src="app/services/JobFactory.js"></script>
 
     <script src="app/app.js"></script>
-   
+
 
   </body>
 </html>
