--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -1,11 +1,11 @@
 
-<div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
         <div class="panel-heading">
             <div class="panel-title">Sign Up</div>
         </div>
-        <div style="padding-top:30px" class="panel-body">
-            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+        <div class="panel-body">
+            <div id="login-alert" class="alert alert-danger col-sm-12"></div>
             <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
                 <div class="form-group">
                     <label for="firstname" class="col-md-3 control-label">Username</label>
@@ -22,17 +22,17 @@
                 <div class="form-group">
                     <label for="icode" class="col-md-3 control-label">Confirm Password</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" name="icode" placeholder="">
+                        <input type="text" class="form-control" name="icode" placeholder="Confirm Password">
                     </div>
                 </div>
-                <div style="margin-top:10px" class="form-group">
+                <div class="form-group">
                     <div class="col-sm-12 controls">
                         <a id="btn-login" href="#" class="btn btn-success">Sign Up </a>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-12 control">
-                        <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                        <div class="form-footer">
                             Do have an account!
                             <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
 							Sign In Here
