[NAV](Client): delete 2 buttons nav directive {IA}

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -7,9 +7,7 @@
       <li><a href="#">My Stats</a></li>
     </ul>
     <div class="navbar-right">
-      <button type="button" class="btn btn-default navbar-btn" ng-hide="">Sign up</button>
-      <button type="button" class="btn btn-default navbar-btn" ng-show="">Log in</button>
-      <button type="button" class="btn btn-default navbar-btn" ng-show="">Log out</button>
+      <button type="button" class="btn btn-default navbar-btn">Sign out</button>
     </div>
   </div>
 </nav>
