--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -1,4 +1,22 @@
 <nav-bar></nav-bar>
+<!-- Extra navigation - search bar and add job button -->
+<div class="navbar col-lg-12">
+  <div class="container">
+    <div class="navbar-left">
+      <button type="button" class="btn btn-default navbar-btn" ng-click="">Add a job</button>
+      </div>
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search job list">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
+  </div>
+</div>
+<!-- Add job form -->
+<div>
+</div>
+<!-- Job list table -->
 <div>
    <table class='table'>
      <thead >
