[modify](login & singup.html) remove inline styles

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -23,7 +23,7 @@
                     <div class="col-md-12 control">
                         <div>
                             Don't have an account!
-                            <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                            <a href="#">
                             Sign Up Here
                             </a>
                         </div>
