--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -1,12 +1,12 @@
 
-<div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
         <div class="panel-heading">
             <div class="panel-title">Sign Up</div>
         </div>
         <div class="panel-body">
-            <div id="login-alert" class="alert alert-danger col-sm-12"></div>
-            <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
+            <div id="signup-alert" class="alert alert-danger col-sm-12"></div>
+            <form id="signupform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
                 <div class="form-group">
                     <label for="firstname" class="col-md-3 control-label">Username</label>
                     <div class="col-md-9">
@@ -34,7 +34,7 @@
                     <div class="col-md-12 control">
                         <div class="form-footer">
                             Do have an account!
-                            <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                            <a href="#" >
 							Sign In Here
 							</a>
                         </div>
