[MAINLIST](Client): comment {IA}

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -1,5 +1,6 @@
 <nav-bar></nav-bar>
 <div class="container-fluid">
+<!-- Search bar -->
   <div class="col-lg-12">
     <div class="row">
       <div class="col-lg-6 col-lg-offset-3">
@@ -11,7 +12,7 @@
         </div><!-- /input-group -->
       </div><!-- /.col-lg-6 -->
     </div><!-- /.row -->
-  <!-- </div> -->
+  </div>
 
   <!-- Job list table -->
   <div>
