[FILE STRUCTURE](CLIENT): changed file structure for main list view {IA}

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -3,7 +3,12 @@
 <!-- Search bar -->
   <div class="col-lg-12">
     <div class="row">
-      <div class="col-lg-6 col-lg-offset-3">
+
+      <div class="col-lg-2 col-lg-offset-1">
+        <button class="btn btn-default" type="button">Add a job</button>
+      </div><!-- /.col-lg-2 -->
+
+      <div class="col-lg-6">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search job list">
           <span class="input-group-btn">
