--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,9 @@
 
     <script src="app/navbar/navbar.js"></script>
     <script src="app/login/login.js"></script>
+    <script src="app/mainList/mainListDir.js"></script>
     <script src="app/mainList/mainList.js"></script>
     <script src="app/signup/signup.js"></script>
-    <script src="app/singleJob/singleJob.js"></script>
 
 
     <script src="app/services/AuthFactory.js"></script>
