--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -4,10 +4,10 @@
         <div class="panel-heading">
             <div class="panel-title">Sign In</div>
         </div>
-        <div class="panel-body">
-            <div id="login-alert" class="alert alert-danger col-sm-12"></div>
+        <div style="padding-top:30px" class="panel-body">
+            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
             <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
-                <div class="input-group">
+                <div style="margin-bottom: 25px" class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username or email"> </div>
                 <div class="input-group">
@@ -16,14 +16,14 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12 controls">
-                        <a id="btn-login" href="#" class="btn btn-success">Login</a>
+                        <a id="btn-login"  ng-click = "login()" class="btn btn-success">Login</a>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-12 control">
                         <div>
                             Don't have an account!
-                            <a href="#">
+                            <a href="#/signup" onClick="$('#loginbox').hide(); $('#signupbox').show()">
                             Sign Up Here
                             </a>
                         </div>
