--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -4,30 +4,30 @@
         <div class="panel-heading">
             <div class="panel-title">Sign Up</div>
         </div>
-        <div class="panel-body">
-            <div id="signup-alert" class="alert alert-danger col-sm-12"></div>
+        <div style="padding-top:30px" class="panel-body">
+            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
             <form id="signupform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
                 <div class="form-group">
                     <label for="firstname" class="col-md-3 control-label">Username</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" name="firstname" placeholder="First Name">
+                        <input type="text" class="form-control" name="name" placeholder = "Name" ng-model = "user.username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
-                        <input type="password" class="form-control" name="passwd" placeholder="Password">
+                        <input type="password" class="form-control" name="passwd" placeholder="Password" ng-model = "user.password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="icode" class="col-md-3 control-label">Confirm Password</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" name="icode" placeholder="Confirm Password">
+                        <input type="password" class="form-control" name="icode" placeholder="Confirmpassword">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12 controls">
-                        <a id="btn-login" href="#" class="btn btn-success">Sign Up </a>
+                        <a id="btn-login" ng-click = "signup()" href="#" class="btn btn-success">Sign Up </a>
                     </div>
                 </div>
                 <div class="form-group">
