[Client side authenticatio](Login and Signup)Client Side authetication sigin in and signup redirects to homepage{NV}

--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12 controls">
-                        <a id="btn-login" ng-click = "signup()" href="#" class="btn btn-success">Sign Up </a>
+                        <a id="btn-login" ng-click = "signUp()" href="#" class="btn btn-success">Sign Up </a>
                     </div>
                 </div>
                 <div class="form-group">
