--- a/client/app/mainList/addJob.html
+++ b/client/app/mainList/addJob.html
@@ -1,26 +1,26 @@
 <!-- Add job form -->
-<div ng-show="openAddJobForm" class="container-fluid">
-  <form name="addJobForm" class="form-group">
+<div ng-show="openAddJobForm" class="container-fluid" ng-model="new" ng-submit="addJob()">
+  <form class="form-group">
     <div class="row form-row">
       <div class="col-lg-2">
         <label for="company-name">Company name</label>
-        <input type="text" class="form-control" id="company-name" required>
+        <input type="text" class="form-control" id="company-name" ng-model="new.company" required>
       </div>
       <div class="col-lg-2">
         <label for="job-title">Job title</label>
-        <input type="text" class="form-control" id="job-title">
+        <input type="text" class="form-control" id="job-title" ng-model="new.title">
       </div>
       <div class="col-lg-2">
         <label for="contact-person">Contact person</label>
-        <input type="text" class="form-control" id="contact-person">
+        <input type="text" class="form-control" id="contact-person" ng-model="new.contact_person">
       </div>
       <div class="col-lg-2">
         <label for="contact-info">Contact information</label>
-        <input type="text" class="form-control" id="contact-info">
+        <input type="text" class="form-control" id="contact-info" ng-model="new.contact_info">
       </div>
       <div class="col-lg-2">
         <label for="interest-level">Interest level</label>
-        <select class="form-control" id="interest-level">
+        <select class="form-control" id="interest-level" ng-model="new.interest_level">
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -30,7 +30,7 @@
       </div>
       <div class="col-lg-2">
         <label for="status">Application status</label>
-        <select class="form-control" id="status">
+        <select class="form-control" id="status" ng-model="new.status">
           <option>Not applied</option>
           <option>Applied</option>
           <option>Responded</option>
@@ -45,19 +45,19 @@
     <div class="row form-row">
       <div class="col-lg-2">
         <label for="link">Link to posting</label>
-        <input type="text" class="form-control" id="link">
+        <input type="text" class="form-control" id="link" ng-model="new.link">
       </div>
       <div class="col-lg-2">
         <label for="date">Date advertised</label>
-        <input type="date" class="form-control" id="date">
+        <input type="date" class="form-control" id="date" ng-model="new.age">
       </div>
       <div class="col-lg-4">
         <label for="date">Job description/requirements</label>
-        <input type="text" class="form-control" id="date">
+        <input type="text" class="form-control" id="date" ng-model="new.description">
       </div>
       <div class="col-lg-4">
         <label for="date">Additional notes</label>
-        <input type="text" class="form-control" id="date">
+        <input type="text" class="form-control" id="date" ng-model="new.notes">
       </div>
     </div> <!-- row --> <br>
     <div class="row">
