--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -21,7 +21,7 @@
   <!-- Add job form -->
   <add-job-dir></add-job-dir>
   <!-- Job list table -->
-
+{{data.jobs}}
      <table class='table'>
        <thead >
          <tr>
