--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -4,12 +4,12 @@
         <div class="panel-heading">
             <div class="panel-title">Sign In</div>
         </div>
-        <div style="padding-top:30px" class="panel-body">
-            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-            <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
-                <div style="margin-bottom: 25px" class="input-group">
+        <div class="panel-body">
+            <div  id="login-alert" class="alert alert-danger col-sm-12"></div>
+            <form id="loginform" class="form-horizontal" role="form" name="signinForm">
+                <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username or email"> </div>
+                    <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username"> </div>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                     <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="password">
@@ -23,7 +23,7 @@
                     <div class="col-md-12 control">
                         <div>
                             Don't have an account!
-                            <a href="#/signup" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                            <a href="#/signup">
                             Sign Up Here
                             </a>
                         </div>
