--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -4,9 +4,9 @@
         <div class="panel-heading">
             <div class="panel-title">Sign Up</div>
         </div>
-        <div style="padding-top:30px" class="panel-body">
-            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-            <form id="signupform" class="form-horizontal" role="form" name="signinForm" ng-submit='siggnin()'>
+        <div  class="panel-body">
+            <div  id="login-alert" class="alert alert-danger col-sm-12"></div>
+            <form id="signupform" class="form-horizontal" role="form" name="signinForm">
                 <div class="form-group">
                     <label for="firstname" class="col-md-3 control-label">Username</label>
                     <div class="col-md-9">
@@ -22,7 +22,7 @@
                 <div class="form-group">
                     <label for="icode" class="col-md-3 control-label">Confirm Password</label>
                     <div class="col-md-9">
-                        <input type="password" class="form-control" name="icode" placeholder="Confirmpassword">
+                        <input type="password" class="form-control" name="icode" placeholder="Confirm Password">
                     </div>
                 </div>
                 <div class="form-group">
