[FIX](Client): changed scope.data.jobs to scope.jobs {IA}

--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -31,7 +31,7 @@
          </tr>
        </thead>
        <tbody>
-        <tr ng-repeat-start='job in data.jobs' ng-click="job.more = !job.more">
+        <tr ng-repeat-start='job in jobs' ng-click="job.more = !job.more">
           <td>{{job.company}}</td>
           <td>{{job.job_title}}</td>
           <td>{{job.interest_level}}</td>
