--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -1,33 +1,35 @@
 <nav-bar></nav-bar>
 <div class="container-fluid" >
 <!-- Search bar -->
-  <div class="col-lg-12" ng-hide="openAddJobForm">
+  <div class="col-sm-12" ng-hide="openAddJobForm">
     <div class="row">
 
-      <div class="col-lg-2 col-lg-offset-1">
+      <div class="col-sm-2 col-sm-offset-1">
         <button class="btn btn-default" type="button" ng-click="openAddJobForm = !openAddJobForm">Add a job</button>
-      </div><!-- /.col-lg-2 -->
+      </div><!-- /.col-sm-2 -->
 
-      <div class="col-lg-6">
+      <div class="col-sm-6">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search job list">
           <span class="input-group-btn">
             <button class="btn btn-default" type="button">Search</button>
           </span>
         </div><!-- /input-group -->
-      </div><!-- /.col-lg-6 -->
+      </div><!-- /.col-sm-6 -->
     </div><!-- /.row -->
   </div>
   <!-- Add job form -->
   <add-job-dir></add-job-dir>
   <!-- Job list table -->
      <table class='table'>
-       <thead >
+       <thead>
          <tr>
-           <th>Company</th>
-           <th>Title</th>
-           <th>Interest</th>
-           <th>Status</th>
+           <th class="col-sm-3">Company</th>
+           <th class="col-sm-3">Title</th>
+           <th class="col-sm-2">Interest</th>
+           <th class="col-sm-2">Status</th>
+           <th class="col-sm-1">Edit job</th>
+           <th classs="col-sm-1">Remove job</th>
          </tr>
        </thead>
        <tbody>
@@ -36,6 +38,8 @@
           <td>{{job.job_title}}</td>
           <td>{{job.interest_level}}</td>
           <td>{{job.status}}</td>
+          <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+          <td><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>
         </tr>
         <tr ng-if="job.more" ng-repeat-end="">
           <td colspan="4">
