--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -27,16 +27,14 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12 controls">
-                        <a id="btn-login" ng-click = "signUp()" href="#" class="btn btn-success">Sign Up </a>
+                        <a id="btn-login" ng-click="signUp()" href="#" class="btn btn-success">Sign Up </a>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-12 control">
                         <div class="form-footer">
                             Do have an account!
-                            <a href="#" >
-							Sign In Here
-							</a>
+                            <a href="#">Sign In Here</a>
                         </div>
                     </div>
                 </div>
