[fix](removed spaces)Removed unwanted spaces{NV}

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,34 +1,33 @@
-
-  <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <div class="panel-title">Sign In</div>
+<div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <div class="panel-title">Sign In</div>
+    </div>
+    <div class="panel-body">
+      <div id="login-alert" class="alert alert-danger col-sm-12"></div>
+      <form id="loginform" class="form-horizontal" role="form" name="signinForm">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username">
         </div>
-        <div class="panel-body">
-          <div  id="login-alert" class="alert alert-danger col-sm-12"></div>
-            <form id="loginform" class="form-horizontal" role="form" name="signinForm">
-               <div class="input-group">
-                  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username"> </div>
-                    <div class="input-group">
-                      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                      <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="password">
-                    </div>
-                    <div class="form-group">
-                      <div class="col-sm-12 controls">
-                          <a id="btn-login"  ng-click="login()" class="btn btn-success">Login</a>
-                      </div>
-                    </div>
-                  <div class="form-group">
-                      <div class="col-md-12 control">
-                        <div>
-                          Don't have an account!
-                          <a href="#/signup">Sign Up Here</a>
-                        </div>
-                      </div>
-                  </div>
-            </form>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="password">
         </div>
+        <div class="form-group">
+          <div class="col-sm-12 controls">
+            <a id="btn-login" ng-click="login()" class="btn btn-success">Login</a>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12 control">
+            <div>
+              Don't have an account!
+              <a href="#/signup">Sign Up Here</a>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-  </div>
+</div>
