--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -25,24 +25,26 @@
        <thead>
          <tr>
            <th class="col-sm-3">Company</th>
-           <th class="col-sm-3">Title</th>
+           <th class="col-sm-2">Title</th>
            <th class="col-sm-2">Interest</th>
            <th class="col-sm-2">Status</th>
+           <th class="col-sm-1">Show more</th>
            <th class="col-sm-1">Edit job</th>
            <th classs="col-sm-1">Remove job</th>
          </tr>
        </thead>
        <tbody>
-        <tr ng-repeat-start='job in jobs' ng-click="job.more = !job.more">
+        <tr ng-repeat-start='job in jobs'>
           <td>{{job.company}}</td>
           <td>{{job.job_title}}</td>
           <td>{{job.interest_level}}</td>
           <td>{{job.status}}</td>
+          <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more"></span></td>
           <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
-          <td><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></td>
+          <td><span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removeJob(job)"></span></td>
         </tr>
         <tr ng-if="job.more" ng-repeat-end="">
-          <td colspan="4">
+          <td colspan="7">
             <single-job-dir></single-job-dir>
           </td>
         </tr>
