--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -7,7 +7,7 @@
       <li><a href="#">My Stats</a></li>
     </ul>
     <div class="navbar-right">
-      <button type="button" class="btn btn-default navbar-btn">Sign out</button>
+      <a href="#/login" type="button" class="btn btn-default navbar-btn" ng-click="endSession()">Sign out</a>
     </div>
   </div>
 </nav>
