--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -36,8 +36,8 @@
        <tbody>
         <tr ng-repeat-start='job in jobs'>
           <td>{{job.company}}</td>
-          <td>{{job.job_title}}</td>
-          <td>{{job.interest_level}}</td>
+          <td>{{job.jobTitle}}</td>
+          <td>{{job.interestLevel}}</td>
           <td>{{job.status}}</td>
           <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more"></span></td>
           <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
