[FIX](Client/DB): clear the form after adding a job, change property name in job schema {IA}

--- a/client/app/mainList/addJob.html
+++ b/client/app/mainList/addJob.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-2">
         <label for="link">Link to posting</label>
-        <input type="text" class="form-control" id="link" ng-model="new.link">
+        <input type="text" class="form-control" id="link" ng-model="new.jobLink">
       </div>
       <div class="col-lg-2">
         <label for="interest-level">Interest level</label>
