--- a/client/app/mainList/singleJob.html
+++ b/client/app/mainList/singleJob.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
           <th>Link to the job posting</th>
-          <td>{{job.link}}</td>
+          <td>{{job.jobLink}}</td>
         </tr>
         <tr>
           <th>Date advertised</th>
