--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Job-Tracker</title>
-
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-
   </head>
   <body>
     <div ui-view></div>
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+    <link href="lib/angular-xeditable/dist/css/xeditable.css" rel="stylesheet"/>
+    <script src="lib/angular-xeditable/dist/js/xeditable.js"></script>
 
     <script src="app/navbar/navbar.js"></script>
     <script src="app/login/login.js"></script>
