--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -25,26 +25,26 @@
        <thead>
          <tr>
            <th class="col-sm-3">Company</th>
-           <th class="col-sm-2">Title</th>
+           <th class="col-sm-3">Title</th>
            <th class="col-sm-2">Interest</th>
            <th class="col-sm-2">Status</th>
            <th class="col-sm-1">Show more</th>
-           <th class="col-sm-1">Edit job</th>
            <th classs="col-sm-1">Remove job</th>
          </tr>
        </thead>
        <tbody>
         <tr ng-repeat-start='job in jobs'>
-          <td>{{job.company}}</td>
-          <td>{{job.jobTitle}}</td>
-          <td>{{job.interestLevel}}</td>
-          <td>{{job.status}}</td>
-          <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more"></span></td>
-          <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+          <td editable-text="job.company" onaftersave="editJob(job)">{{ job.company || "--" }}</td>
+          <td editable-text="job.jobTitle" onaftersave="editJob(job)">{{job.jobTitle || "--" }}</td>
+          <td editable-select="job.interestLevel" e-ng-options="s.value for s in interestLevels"
+            onaftersave="editJob(job, $data, 'interestLevel')">{{ showInterestLevel(job) }}</td>
+          <td editable-select="job.status" e-ng-options="s.value for s in statuses"
+            onaftersave="editJob(job, $data, 'status')">{{ showStatus(job) }}</td>
+          <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more; showDate(job)"></span></td>
           <td><span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removeJob(job)"></span></td>
         </tr>
         <tr ng-if="job.more" ng-repeat-end="">
-          <td colspan="7">
+          <td colspan="6">
             <single-job-dir></single-job-dir>
           </td>
         </tr>
