[FIX](Client): fixed showDate function {IA}

--- a/client/app/mainList/singleJob.html
+++ b/client/app/mainList/singleJob.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
           <th>Date advertised</th>
-          <td editable-date="job.age" onbeforesave="formatDate(job, $data)" onaftersave="showDate(job); editJob(job)">{{ job.niceDateString }}</td>
+          <td editable-date="job.age" onaftersave="showDate(job); editJob(job)">{{ job.niceDateString }}</td>
         </tr>
       </table>
 
