[FIX](Client): Error handling for logout function and move redirect to AuthFactory {VE}

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -7,7 +7,7 @@
       <li><a href="#">My Stats</a></li>
     </ul>
     <div class="navbar-right">
-      <a href="#/login" type="button" class="btn btn-default navbar-btn" ng-click="logout()">Sign out</a>
+      <button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Sign out</button>
     </div>
   </div>
 </nav>
