[FIX](Client): changed description and notes fields to be <textarea> el {IA}

--- a/client/app/mainList/addJob.html
+++ b/client/app/mainList/addJob.html
@@ -57,11 +57,11 @@
       </div>
       <div class="col-lg-3">
         <label for="date">Job description/requirements</label>
-        <input type="text" class="form-control" id="date" ng-model="new.description">
+        <textarea class="form-control" id="date" ng-model="new.description"/>
       </div>
       <div class="col-lg-3">
         <label for="date">Additional notes</label>
-        <input type="text" class="form-control" id="date" ng-model="new.notes">
+        <textarea class="form-control" id="date" ng-model="new.notes"/>
       </div>
     </div> <!-- row --> <br>
     <div class="row">
