[FEATURE](Client): created files and function definitions {IA}

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -4,7 +4,7 @@
     <ul class="nav navbar-nav">
       <li><a href="#">My Profile</a></li>
       <li class="active"><a href="#/mainList">My Jobs<span class="sr-only">(current)</span></a></li>
-      <li><a href="#">My Stats</a></li>
+      <li><a href="#/stats">My Stats</a></li>
     </ul>
     <div class="navbar-right">
       <button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Sign out</button>
