--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
     <script src="app/mainList/mainListDir.js"></script>
     <script src="app/mainList/mainList.js"></script>
     <script src="app/signup/signup.js"></script>
-
+    <script src="app/stats/stats.js"></script>
 
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
