--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -7,11 +7,11 @@
       <form id="loginform" class="form-horizontal" role="form" name="signinForm">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="username">
+          <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="Username">
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="password">
+          <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="Password">
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
