[FEATURE](CLIENT): added ul list to html stats {IA}

--- a/client/app/stats/stats.html
+++ b/client/app/stats/stats.html
@@ -1,1 +1,14 @@
 <nav-bar></nav-bar>
+
+<ul>
+  <li>{{jobs.total}}</li>
+  <li>{{jobs.active}}</li>
+  <li>{{jobs.interested}}</li>
+  <li>{{jobs.applied}}</li>
+  <li>{{jobs.responded}}</li>
+  <li>{{jobs.phone}}</li>
+  <li>{{jobs.interview}}</li>
+  <li>{{jobs.offer}}</li>
+  <li>{{jobs.rejected}}</li>
+  <li>{{jobs.ignored}}</li>
+</ul>
