--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -7,15 +7,15 @@
       <form id="signupform" class="form-horizontal" role="form" name="signinForm">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="Username">
+          <input id="signup-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="Username">
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="Password">
+          <input id="signup-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="Password">
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="login-password" type="password" class="form-control" name="password" 
+          <input id="signup-confirm password" type="password" class="form-control" name="password" 
           placeholder="Confirm Password">
         </div>
         <div class="form-group">
