--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,9 +1,10 @@
 <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <div class="panel panel-info">
     <div class="panel-heading">
-      <div class="panel-title">Sign In</div>
+      <div class="panel-title">Login</div>
     </div>
     <div class="panel-body">
+      <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
       <form id="loginform" class="form-horizontal" role="form" name="signinForm">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -21,7 +22,7 @@
         <div class="form-group">
           <div class="col-md-12 control">
             <div>
-              Don't have an account!
+              Don't have an account yet?
               <a href="#/signup">Sign Up Here</a>
             </div>
           </div>
