--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -4,7 +4,7 @@
       <div class="panel-title">Sign Up</div>
     </div>
     <div class="panel-body">
-      <div id="login-alert" class="alert alert-danger col-sm-12"></div>
+      <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
       <form id="signupform" class="form-horizontal" role="form" name="signinForm">
         <div class="form-group">
           <label for="firstname" class="col-md-3 control-label">Username</label>
@@ -32,8 +32,8 @@
         <div class="form-group">
           <div class="col-md-12 control">
             <div class="form-footer">
-              Do have an account!
-              <a href="#">Sign In Here</a>
+              Do you have an account?
+              <a href="#/login">Sign In Here</a>
             </div>
           </div>
         </div>
