--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 
     <link href="lib/angular-xeditable/dist/css/xeditable.css" rel="stylesheet"/>
     <script src="lib/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="lib/angular-validation-match/dist/angular-validation-match.js"></script>
 
     <script src="app/navbar/navbar.js"></script>
     <script src="app/login/login.js"></script>
