[FIX](Client/Server): Small fixes to not crash server after merge {VE}

--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
-            <a id="btn-login" ng-click="signUp()" href="#" class="btn btn-success">Sign Up </a>
+            <button id="btn-login" ng-click="signUp()" class="btn btn-success">Sign Up </button>
           </div>
         </div>
         <div class="form-group">
