--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
-            <button id="btn-login" ng-click="signUp()" class="btn btn-success">Sign Up </button>
+            <a id="btn-login" ng-click="signUp()" href="#" class="btn btn-success">Sign Up </a>
           </div>
         </div>
         <div class="form-group">
