--- a/client/index.html
+++ b/client/index.html
@@ -19,10 +19,10 @@
     <script src="lib/angular-validation-match/dist/angular-validation-match.js"></script>
 
     <script src="app/navbar/navbar.js"></script>
-    <script src="app/login/login.js"></script>
+    <script src="app/auth/login/login.js"></script>
     <script src="app/mainList/mainListDir.js"></script>
     <script src="app/mainList/mainList.js"></script>
-    <script src="app/signup/signup.js"></script>
+    <script src="app/auth/signup/signup.js"></script>
     <script src="app/stats/stats.js"></script>
 
     <script src="app/services/AuthFactory.js"></script>
