--- a/client/app/auth/login/login.html
+++ b/client/app/auth/login/login.html
@@ -5,7 +5,7 @@
     </div>
     <div class="panel-body">
       <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
-      <form id="loginform" class="form-horizontal" role="form" name="signinForm">
+      <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit="login()">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
           <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="Username">
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
-            <a id="btn-login" ng-click="login()" class="btn btn-success">Login</a>
+            <button id="btn-login" type="submit" class="btn btn-success">Login</button>
           </div>
         </div>
         <div class="form-group">
