--- a/client/app/auth/login/login.html
+++ b/client/app/auth/login/login.html
@@ -1,18 +1,20 @@
-<div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <div class="panel panel-info">
     <div class="panel-heading">
       <div class="panel-title">Login</div>
     </div>
     <div class="panel-body">
       <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
-      <form id="loginform" class="form-horizontal" role="form" name="signinForm" ng-submit="login()">
+      <form class="form-horizontal" role="form" name="signinForm" ng-submit="login()">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input id="login-username" type="text" ng-model='user.username' class="form-control" name="username" value="" placeholder="Username">
+          <input type="text" ng-model='user.username' class="form-control"
+            name="username" value="" placeholder="Username" required>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="login-password" type="password" ng-model='user.password' class="form-control" name="password" placeholder="Password">
+          <input id="login-password" type="password" ng-model='user.password' class="form-control"
+            name="password" placeholder="Password" required>
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
