--- a/client/app/auth/signup/signup.html
+++ b/client/app/auth/signup/signup.html
@@ -5,22 +5,27 @@
     </div>
     <div class="panel-body">
       <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
-      <form class="form-horizontal" role="form" name="signupForm" ng-submit="signUp()">
+      <form class="form-horizontal" role="form" name="signupForm" ng-submit="signupForm.$valid && signUp()">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input id="signup-username" type="text" ng-model='user.username' class="form-control" name="username" placeholder="Username">
+          <input id="signup-username" type="text" ng-model='user.username'
+            class="form-control" name="username" placeholder="Username" ng-minlength="6" required>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="signup-password" type="password" ng-model='user.password' class="form-control" placeholder="Password">
+          <input type="password" name="password" ng-model='user.password'
+            class="form-control" placeholder="Password" ng-minlength="6" required>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="signup-confirm password" type="password" class="form-control" ng-model='user.confirmPassword'
-          name="confirmPassword" match="user.password" placeholder="Confirm Password" match-ignore-empty="true">
+          <input type="password" class="form-control" ng-model='user.confirmPassword'
+          name="confirmPassword" match="user.password" placeholder="Confirm Password" match-ignore-empty="true" ng-minlength="6" required>
         </div>
         <div ng-show="signupForm.confirmPassword.$error.match" class="alert alert-danger col-sm-12">
           Passwords do not match
+        </div>
+        <div ng-show="signupForm.password.$dirty && signupForm.password.$invalid" class="alert alert-danger col-sm-12">
+          Password should be min 6 characters
         </div>
         <div class="form-group">
           <div class="col-sm-12 controls">
