[FEATURE](Client): Add styling to login and signup pages {VE}

--- a/client/app/auth/signup/signup.html
+++ b/client/app/auth/signup/signup.html
@@ -35,8 +35,8 @@
         <div class="form-group">
           <div class="col-md-12 control">
             <div class="form-footer">
-              Do you have an account?
-              <a href="#/login">Sign In Here</a>
+              Already have an account?
+              <a class='link' href="#/login">Sign In Here</a>
             </div>
           </div>
         </div>
