--- a/client/app/auth/login/login.html
+++ b/client/app/auth/login/login.html
@@ -1,10 +1,14 @@
 <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <div class="panel panel-info">
+
     <div class="panel-heading">
       <div class="panel-title">Login</div>
     </div>
+
     <div class="panel-body">
-      <div ng-show="error" class="alert alert-danger col-sm-12">{{error}}</div>
+      <div ng-show="error" class="alert alert-danger col-sm-12">
+        {{error}}
+      </div>
       <form class="form-horizontal" role="form" name="signinForm" ng-submit="login()">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -23,13 +27,14 @@
         </div>
         <div class="form-group">
           <div class="col-md-12 control">
-            <div>
+            <div class='form-footer'>
               Don't have an account yet?
-              <a href="#/signup">Sign Up Here</a>
+              <a class='link' href="#/signup">Sign Up Here</a>
             </div>
           </div>
         </div>
       </form>
     </div>
+
   </div>
 </div>
