[MAIN PAGE](CLIENT): made a basic landing and demo page {IA}

--- a/client/app/auth/signup/signup.html
+++ b/client/app/auth/signup/signup.html
@@ -9,7 +9,7 @@
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
           <input id="signup-username" type="text" ng-model='user.username'
-            class="form-control" name="username" placeholder="Username" ng-minlength="6" required>
+            class="form-control" name="username" placeholder="Username" required>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
