--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <script src="app/mainList/mainList.js"></script>
     <script src="app/auth/signup/signup.js"></script>
     <script src="app/stats/stats.js"></script>
+    <script src="app/demo/demo.js"></script>
 
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
