[DEMO](CLient): demo page functioning correctly {IA}

--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -7,7 +7,7 @@
       <li><a href="#/stats">My Stats</a></li>
     </ul>
     <div class="navbar-right">
-      <button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Sign out</button>
+      <button type="button" class="btn btn-default navbar-btn" ng-click="logout()">{{navButton}}</button>
     </div>
   </div>
 </nav>
