[STATS](Client): started to redo the status format on JobSchema {IA}

--- a/client/app/stats/stats.html
+++ b/client/app/stats/stats.html
@@ -1,16 +1,15 @@
-
 <nav-bar></nav-bar>
-
+<div>
 <ul>
-  <li>{{jobs.total}}</li>
-  <li>{{jobs.active}}</li>
-  <li>{{jobs.interested}}</li>
-  <li>{{jobs.applied}}</li>
-  <li>{{jobs.responded}}</li>
-  <li>{{jobs.phone}}</li>
-  <li>{{jobs.interview}}</li>
-  <li>{{jobs.offer}}</li>
-  <li>{{jobs.rejected}}</li>
-  <li>{{jobs.ignored}}</li>
+  <li>Jobs Total:{{stats.total}}</li>
+  <li>Jobs Active:{{stats.active}}</li>
+  <li>Jobs Interested:{{stats.interested}}</li>
+  <li>Jobs Applied: {{stats.applied}}</li>
+  <li>Jobs Responded: {{stats.responded}}</li>
+  <li>Jobs PhoneScreen: {{stats.phone}}</li>
+  <li>Jobs Interview: {{stats.interview}}</li>
+  <li>Jobs Offer: {{stats.offer}}</li>
+  <li>Jobs Rejected: {{stats.rejected}}</li>
 </ul>
+</div>
 
