upload on client and server works

--- a/client/index.html
+++ b/client/index.html
@@ -29,9 +29,14 @@
     <script src="app/auth/signup/signup.js"></script>
     <script src="app/stats/stats.js"></script>
     <script src="app/demo/demo.js"></script>
+    <script src="app/mainList/singlejob.js"></script>
+
 
     <script src="app/services/AuthFactory.js"></script>
     <script src="app/services/JobFactory.js"></script>
+    <script src="app/services/SingleJobFactory.js"></script>
+    <script src="app/directives/singlejobdir.js"></script>
+
 
     <script src="app/app.js"></script>
 
