--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    
+
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
@@ -14,6 +14,9 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
 
     <link href="lib/angular-xeditable/dist/css/xeditable.css" rel="stylesheet"/>
     <script src="lib/angular-xeditable/dist/js/xeditable.js"></script>
